src/test/ui/coercion/coerce-issue-49593-box-never-windows.nofallback.stderr
error[E0277]: the trait bound `(): std::error::Error` is not satisfied
  --> $DIR/coerce-issue-49593-box-never-windows.rs:18:53
   |
LL |     /* *mut $0 is coerced to Box<dyn Error> here */ Box::<_ /* ! */>::new(x)
   |                                                     ^^^^^^^^^^^^^^^^^^^^^^^^ the trait `std::error::Error` is not implemented for `()`
   |
   = help: the following other types implement trait `std::error::Error`:
             !
             &'a T
             AccessError
             AddrParseError
             Arc<T>
             BorrowError
             BorrowMutError
             Box<T>
           and 45 others
   = note: required for the cast to the object type `dyn std::error::Error`

error[E0277]: the trait bound `(): std::error::Error` is not satisfied
  --> $DIR/coerce-issue-49593-box-never-windows.rs:23:49
   |
LL |     /* *mut $0 is coerced to *mut Error here */ raw_ptr_box::<_ /* ! */>(x)
   |                                                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `std::error::Error` is not implemented for `()`
   |
   = help: the following other types implement trait `std::error::Error`:
             !
             &'a T
             AccessError
             AddrParseError
             Arc<T>
             BorrowError
             BorrowMutError
             Box<T>
           and 45 others
   = note: required for the cast to the object type `(dyn std::error::Error + 'static)`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
